--- a/manifest.json
+++ b/manifest.json
@@ -6,17 +6,5 @@
   "UniqueID": "david.LlamaDialogue",
   "EntryDll": "LlamaDialogue.dll",
   "MinimumApiVersion": "3.13.0",
-  "UpdateKeys": [ "Nexus:1234" ],
-  "ModUpdater": {
-    "Repository": "StardewValleyMods",
-    "User": "david",
-    "Directory": "_releases",
-    "ModFolder": "LlamaDialogue"
-  },
-  "Dependencies": [
-    {
-      "UniqueID": "Platonymous.ModUpdater",
-      "IsRequired": false
-    }
-  ]
+  "UpdateKeys": [ "Nexus:1234" ]
 }
