--- a/LlamaDialogue.csproj
+++ b/LlamaDialogue.csproj
@@ -15,5 +15,8 @@
   <ItemGroup>
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1" />
     <PackageReference Include="Polly.Core" Version="8.4.2" />
+    <PackageReference Include="serilog" Version="4.1.0" />
+    <PackageReference Include="serilog.sinks.console" Version="6.0.0" />
+    <PackageReference Include="serilog.sinks.file" Version="6.0.0" />
   </ItemGroup>
 </Project>
