--- a/ValleyTalk.csproj
+++ b/ValleyTalk.csproj
@@ -11,7 +11,7 @@
     <None Update="manifest.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
-    <None Update="config.json">
+    <None Update="config.json" Condition="'$(Configuration)' == 'Release'">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
   </ItemGroup>
