--- a/config.json
+++ b/config.json
@@ -1,10 +1,14 @@
 {
   "EnableMod": true,
   "Debug": false,
-  "Provider": "Google",
-  "ModelName": "gemini-1.5-flash",
-  "ServerAddress": "http://loclhost:8080",
+  "Provider": "Mistral",
+  "ModelName": "",
+  "ServerAddress": "https://openrouter.ai/api",
   "PromptFormat": "[INST] {system}\n{prompt}[/INST]\n{response_start}",
   "ApiKey": "",
-  "ApplyTranslation": false
+  "ApplyTranslation": false,
+  "GeneralFrequency": 4,
+  "MarriageFrequency": 4,
+  "GiftFrequency": 4,
+  "DisableCharacters": ""
 }
