--- a/src/ValleyTalk.csproj
+++ b/src/ValleyTalk.csproj
@@ -16,6 +16,7 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="newtonsoft.json" Version="13.0.3" />
     <PackageReference Include="Pathoschild.Stardew.ModBuildConfig" Version="4.1.1" />
     <PackageReference Include="Polly.Core" Version="8.4.2" />
     <PackageReference Include="serilog" Version="4.1.0" />
