--- a/ContentPack/manifest.json
+++ b/ContentPack/manifest.json
@@ -1,9 +1,9 @@
 {
     "Name": "ValleyTalk Content Pack",
     "Author": "dandm1",
-    "Version": "0.13.0",
+    "Version": "%ProjectVersion%",
     "Description": "Infinite dialogue for Stardew Valley",
-    "UniqueID": "dandm1.ValleyTalkCP",
+    "UniqueID": "dandm1.CPValleyTalk",
     "MinimumApiVersion": "4.1.0",
     "UpdateKeys": [ "Nexus:30319" ],
     "ContentPackFor": {
