Add a config setting to suppress the connection check

--- a/src/config.json
+++ b/src/config.json
@@ -13,5 +13,6 @@
   "GiftFrequency": 4,
   "TypedResponses": "With Generated",
   "DisableCharacters": "",
-  "InitiateTypedDialogueKey": "LeftAlt"
+  "InitiateTypedDialogueKey": "LeftAlt",
+  "SupressConnectionCheck": false
 }
